Bumper fpsoknad-felles og fikser sonar feil (#1804)
* Bumper fpsoknad-felles og fikser sonar feil

* Fikser Blocker og Critical bugs fra sonar

* Bump fpsokand-felles 0.8.8

* Periode og fom skal alltid være satt (@NotNull) + rydding