@@ -16,7 +16,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.pdfbox.pdmodel.PDPage;
 import org.slf4j.Logger;
@@ -30,7 +29,6 @@ import no.nav.foreldrepenger.common.domain.foreldrepenger.Foreldrepenger;
 import no.nav.foreldrepenger.common.domain.foreldrepenger.fordeling.GradertUttaksPeriode;
 import no.nav.foreldrepenger.common.domain.foreldrepenger.fordeling.LukketPeriodeMedVedlegg;
 import no.nav.foreldrepenger.common.domain.foreldrepenger.fordeling.UtsettelsesPeriode;
-import no.nav.foreldrepenger.common.domain.foreldrepenger.fordeling.UtsettelsesÅrsak;
 import no.nav.foreldrepenger.mottak.oppslag.arbeidsforhold.EnkeltArbeidsforhold;
 
 @Component
@@ -56,7 +54,7 @@ public class InfoskrivRenderer {
 
         var navn = textFormatter.navn(søker);
         var datoInntektsmelding = søknad.getFørsteInntektsmeldingDag();
-        var ytelse = Foreldrepenger.class.cast(søknad.getYtelse());
+        var ytelse = (Foreldrepenger) søknad.getYtelse();
 
         var cos = førstesideInfoskriv(doc, cosOriginal);
 
@@ -150,7 +148,7 @@ public class InfoskrivRenderer {
                 .filter(a -> virksomhetsnummer.contains(a.getArbeidsgiverId()))
                 .map(EnkeltArbeidsforhold::getArbeidsgiverNavn)
                 .map(s -> txt("arbeidsgiver", s))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private float renderFerieArbeidsperioder(List<UtsettelsesPeriode> ferieArbeidsperioder,
@@ -220,7 +218,7 @@ public class InfoskrivRenderer {
                 .filter(this::isGradertPeriode)
                 .map(GradertUttaksPeriode.class::cast)
                 .filter(GradertUttaksPeriode::isErArbeidstaker)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isGradertPeriode(LukketPeriodeMedVedlegg periode) {
@@ -231,12 +229,12 @@ public class InfoskrivRenderer {
         return periode.stream()
                 .filter(this::isFerieOrArbeid)
                 .map(UtsettelsesPeriode.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isFerieOrArbeid(LukketPeriodeMedVedlegg periode) {
-        if (periode instanceof UtsettelsesPeriode) {
-            UtsettelsesÅrsak årsak = UtsettelsesPeriode.class.cast(periode).getÅrsak();
+        if (periode instanceof UtsettelsesPeriode utsettelsesPeriode) {
+            var årsak = utsettelsesPeriode.getÅrsak();
             return årsak.equals(LOVBESTEMT_FERIE) || årsak.equals(ARBEID);
         }
         return false;
